@@ -4,6 +4,7 @@
 
 == ruote-dm 2.1.11    not yet released
 
+- workitems.by_participant() :skip and :limit support
 - get_many(x, y, :skip => 10) support
 - get_many(x, y, :count => true) support
 
